# lab_4_pseudo

./: CMakeLists.txt  Doxygen  main.cpp
set_data/: model_data_0.json  model_data_1.json  model_data_2.json  model_data_3.json  model_data_4.json  model_data_5.json  model_data_6.json  model_data_7.json
src/: CMakeLists.txt
src/generator/: CMakeLists.txt  generator.cpp  generator.hpp
src/model/: CMakeLists.txt  model.cpp  model.hpp
src/pseudo_random/: CMakeLists.txt  pseudo_random.cpp  pseudo_random.hpp
src/search/: CMakeLists.txt  search.cpp  search.hpp
src/sorting/: CMakeLists.txt  sorting.cpp  sorting.hpp
